--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coffeenode-suspend": "^0.1.11",
     "coffeenode-tex": "0.0.2",
     "coffeenode-text": "^0.1.9",
+    "commander": "^2.9.0",
     "cxltx-styles": "^1.0.0",
     "hollerith": "^1.0.2",
     "hollerith-codec": "^1.0.23",
@@ -38,6 +39,7 @@
   "scripts": {
     "build": "gulp --harmony build",
     "compare-cjkvi": "npm run build && node --harmony --harmony-proxies lib/compare-recent-cjkvi-ids-data.js",
+    "mkts": "node --harmony lib/cli.js mkts $2",
     "test": "npm run build && node --harmony lib/tests.js"
   },
   "repository": {
