--- a/package.json
+++ b/package.json
@@ -13,22 +13,11 @@
     "coffeenode-tex": "0.0.2",
     "coffeenode-text": "^0.1.9",
     "commander": "^2.9.0",
-    "cxltx-styles": "^1.0.0",
     "hollerith": "^1.0.2",
     "hollerith-codec": "^1.0.23",
-    "htmlparser2": "^3.8.3",
     "kwic": "^1.0.7",
     "level": "^1.3.0",
-    "markdown-it": "^4.4.0",
-    "markdown-it-container": "^1.0.0",
-    "markdown-it-footnote": "^1.0.0",
-    "markdown-it-mark": "^1.0.0",
-    "markdown-it-regexp": "^0.4.0",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "parse5": "^1.5.0",
-    "pipedreams": "^0.2.32",
-    "semver": "^5.0.3"
+    "pipedreams": "^0.2.32"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
