--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hollerith-codec": "^1.0.23",
     "kwic": "^1.0.7",
     "level": "^1.3.0",
+    "longest-repeating-sublist": "^1.0.2",
     "pipedreams": "^0.2.32"
   },
   "devDependencies": {
