--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "^2.9.0",
     "hollerith": "^1.0.2",
     "hollerith-codec": "^1.0.23",
+    "idlx": "0.0.9",
     "kwic": "^1.0.7",
     "level": "^1.3.0",
     "longest-repeating-sublist": "^1.0.2",
